Fixed arrow alignment issues in list

--- a/distributor-state-list/distributor-state-list.css
+++ b/distributor-state-list/distributor-state-list.css
@@ -119,6 +119,7 @@
 {
     vertical-align: middle;
     margin-left: 10%;
+    font-family:monospace;
     color: white;
     font-size: 2.5vh;
 }
